--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -1,5 +1,16 @@
-<div id="map" style="width: 100%; height: 600px;">
-    <!-- <div id="panel"><button id="expired_graves" class="btn btn-primary">Expired Graves</button></div> -->
-    <button (click)="handleExpiredGravesButtonClick()">Show Expired Graves</button>
-    <button (click)="handleGravePlotsButtonClick()">Show Grave Plots</button>
+<div *ngIf="showLoader" class="spinner-section">
+    <div class="spinner-border" role="status">
+        <span class="sr-only" id="loading"></span>
+    </div>
 </div>
+
+<header>
+    <div class="title">Map Viewer - Openlayers & Angular</div>
+</header>
+<main>
+    <div class="left-bar">
+        <button (click)="handleExpiredGravesButtonClick()">Show Expired Graves</button>
+        <button (click)="handleGravePlotsButtonClick()">Show Grave Plots</button>
+    </div>
+    <div id="map"></div>
+</main>
